Add comprehensive security implementation guide and quick reference for PCI DSS and XSS protection
- Introduced Security Implementation Guide detailing PCI DSS compliance, XSS protection, and visual security indicators.
- Created Security Quick Reference Card summarizing key protections and user guidelines.
- Developed PCI DSS Checker and XSS Protection libraries for real-time data sanitization.
- Implemented test page for validating security features and monitoring console logs.
- Enhanced CSS styling for security notices and warning messages.
- Established best practices for users, administrators, and developers regarding security measures.

--- a/Version 5/admin.html
+++ b/Version 5/admin.html
@@ -484,6 +484,14 @@
         </div>
     </div>
 
+    <!-- Security Libraries -->
+    <script src="pci-dss-checker.js"></script>
+    <script src="xss-protection.js"></script>
+    
+    <!-- SharePoint Helpers -->
+    <script src="sp-helpers.js"></script>
+    
+    <!-- Admin Application -->
     <script src="admin.js"></script>
 </body>
 </html>
